--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,7 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 1rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -51,7 +51,7 @@
 }
 
 .description {
-  margin: 4rem 0;
+  margin: 2rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
 }
@@ -109,7 +109,24 @@
 }
 .mainnav{
   display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  padding-top: 3rem;
 }
+
+.mainnav ul{
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.mainnav ul li{
+  list-style: none;
+  padding: 1rem;
+  font-weight: bold;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
